--- a/src/pages/scoring/index.astro
+++ b/src/pages/scoring/index.astro
@@ -6,7 +6,7 @@ import Header from "../../components/Header";
 
 <Layout title="Scoring View">
   <Header headerName="MMBU Scoring" />
-  <div class="flex w-screen h-screen justify-center items-center">
+  <div class="flex w-screen justify-center items-center">
     <Scoring client:visible />
   </div>
 </Layout>
